# queens-app

./: DirectionsViewController.m
QBet/: CreditsViewController.h  CreditsViewController.m  DirectionsViewController.h  DirectionsViewController.m  EventDateViewController.m  EventInfoViewController.h  EventInfoViewController.xib  QBet-Prefix.pch  ViewController.m  day1.xml  day2.xml  day3.xml
QBet.xcodeproj/: project.pbxproj
QBet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
QBet.xcodeproj/xcuserdata/Huynh.xcuserdatad/xcschemes/: xcschememanagement.plist
QBet/QBet/: AppDelegate.m  CreditsViewController.xib  DirectionsViewController.xib  EventDataGetter.h  EventDataGetter.m  EventInfoViewController.h  EventInfoViewController.m  EventInfoViewController.xib  EventInfoViewController.xib~  InformationViewController.h  InformationViewController.m  InformationViewController.xib  ItineraryViewController.h  ItineraryViewController.m  ItineraryViewController.xib  NewsroomViewController.h  NewsroomViewController.m  NewsroomViewController.xib  ViewController.h  ViewController.m  victoria hall.tiff
QBet/QBet.xcodeproj/: project.pbxproj
QBet/QBet.xcodeproj/project.xcworkspace/xcuserdata/Huynh.xcuserdatad/: UserInterfaceState.xcuserstate
QBet/QBet.xcodeproj/xcuserdata/Huynh.xcuserdatad/xcschemes/: QBet.xcscheme
QBet/QBet/en.lproj/: ViewController.xib
QBet/en.lproj/: ViewController.xib
common/: Doxyfile  Doxyfile.in  Makefile.am  autogen.sh  compat.h  conf-event.h  config.h.in  configure.ac  event.c  format.h  xml-format.h  xml.c  xml.h
common/tests/: countxml.sh  read-test.c  test.xml
gui/: Makefile.am  configure.ac  dat.rc  gui.glade
headers/: event.h
xcode/: DirectionsViewController.xib
xcode/Q'Bet/: AppDelegate.h  AppDelegate.m  FirstViewController.h  FirstViewController.m  Q'Bet-Info.plist  Q'Bet-Prefix.pch  SecondViewController.h  SecondViewController.m  main.m
xcode/Q'Bet.xcodeproj/: project.pbxproj
xcode/Q'Bet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/Q'Bet.xcodeproj/project.xcworkspace/xcuserdata/Huynh.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Q'Bet.xcodeproj/xcuserdata/Huynh.xcuserdatad/xcschemes/: Q'Bet.xcscheme  xcschememanagement.plist
xcode/Q'BetTests/: Q'BetTests-Info.plist  Q_BetTests.h  Q_BetTests.m
xcode/QBet/: AppDelegate.h  EventDateViewController.h  EventDateViewController.xib  EventInfoViewController.m  ViewController.h  main.m
xcode/QBet.xcodeproj/project.xcworkspace/xcuserdata/Huynh.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/QueensQBitApp/: NewGUIAppDelegate.h  NewGUIAppDelegate.m  NewGUIFirstViewController.h  NewGUIFirstViewController.m  NewGUISecondViewController.h  NewGUISecondViewController.m  QueensQBitApp-Prefix.pch  main.m
xcode/QueensQBitApp.xcodeproj/: project.pbxproj
xcode/QueensQBitApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/QueensQBitApp/en.lproj/: NewGUIFirstViewController.xib  NewGUISecondViewController.xib
xcode/QueensQBitAppTests/: QueensQBitAppTests.h  QueensQBitAppTests.m
(+4 files in other folders)
